<resources>
    <string name="app_name">usermg</string>
    <string name="full_name">Full Name</string>
    <string name="username">Username</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="have_account">Have Account?</string>
    <string name="login">Login</string>
    <string name="no_have_account">No have account?</string>
    <string name="remember_me">Remember Me</string>
    <string name="telphone_number">Telphone Number</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verification_code">Verification Code</string>
    <string name="submit">Submit</string>
    <string name="country_code_hint">62</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="resend">Resend</string>
    <string name="verify_email">Verify Email</string>
    <string name="title_activity_page_main">PageMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="logout">Log Out</string>
    <string name="are_you_sure_want_to_log_out">Are you sure want to Log Out?</string>
    <string name="title">Title</string>
    <string name="ask_logout">Are you sure want to Log Out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="loading">Loading...</string>
</resources>